--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,7 @@ manim>=0.19.0  # For mathematical animations
 numpy>=1.22.0  # Required by Manim
 gradio>=3.50.0  # For the web interface
 python-dotenv>=1.0.0  # For environment variables
+pycairo
 
 # Text and LaTeX rendering
 manimpango>=0.5.0  # For text rendering in Manim
