--- a/requirements.txt
+++ b/requirements.txt
@@ -2,8 +2,8 @@
 manim>=0.19.0  # For mathematical animations
 numpy>=1.22.0  # Required by Manim
 gradio>=3.50.0  # For the web interface
-python-dotenv>=1.0.0  # For environment variables
-pycairo
+python-dotenv>=1.0.1  # For environment variables
+pycairo==1.20.1
 
 # Text and LaTeX rendering
 manimpango>=0.5.0  # For text rendering in Manim
