--- a/requirements.txt
+++ b/requirements.txt
@@ -3,7 +3,7 @@ manim>=0.19.0  # For mathematical animations
 numpy>=1.22.0  # Required by Manim
 gradio>=3.50.0  # For the web interface
 python-dotenv>=1.0.1  # For environment variables
-pycairo==1.20.1
+pycairo==1.20.1; platform_system != "Linux"
 
 # Text and LaTeX rendering
 manimpango>=0.5.0  # For text rendering in Manim
