--- a/requirements.txt
+++ b/requirements.txt
@@ -3,29 +3,21 @@ manim>=0.18.0  # For mathematical animations
 numpy>=1.22.0  # Required by Manim
 gradio>=3.50.0  # For the web interface
 python-dotenv>=1.0.1  # For environment variables
-pycairo==1.20.1; platform_system != "Linux"
+pycairo>=1.20.1  # Ensure compatibility on Linux as well
 
 # Text and LaTeX rendering
 manimpango>=0.5.0  # For text rendering in Manim
 latex>=0.7.0  # Python LaTeX utilities
-
-# Note: The following LaTeX distributions need to be installed via system package manager:
-# Windows: MiKTeX (https://miktex.org/download)
-# Ubuntu/Debian: texlive-full
-# macOS: MacTeX
 
 # Optional but recommended for development
 ipython>=8.0.0  # For interactive development
 pytest>=7.0.0  # For testing
 black>=22.0.0  # For code formatting
 
-# Additional System Requirements:
-# FFmpeg - Required for video rendering with Manim
-# Installation options:
-# 1. Windows: Download from https://www.gyan.dev/ffmpeg/builds/
-#    - Recommended: Get the "ffmpeg-git-full.7z" release
-#    - Extract and add the bin folder to system PATH
-# 2. Alternative: Install via package managers
-#    - Windows (Chocolatey): choco install ffmpeg
-#    - Linux: apt-get install ffmpeg
-#    - macOS: brew install ffmpeg
+# System-related dependencies
+ffmpeg-python>=0.2.0  # Python bindings for FFmpeg
+
+# System Notes:
+# The following dependencies must be installed on the system:
+# - texlive-full (Linux/Ubuntu for LaTeX rendering)
+# - FFmpeg (for video rendering)
